--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,22 @@ x-transformers
 adamp
 efficientnet_pytorch
 tensorboardX
-vit-pytorch
-swin-transformer-pytorch
-madgrad
+#vit-pytorch
+git+https://github.com/lucidrains/vit-pytorch.git
+#swin-transformer-pytorch
+git+https://github.com/korvin2000/swin-transformer-pytorch
+#madgrad
+git+https://github.com/facebookresearch/madgrad
 git+https://github.com/huggingface/pytorch-image-models
-pillow-avif-plugin
-kornia
-omegaconf
+#pillow-avif-plugin
+git+https://github.com/fdintino/pillow-avif-plugin/
+git+https://github.com/kornia/kornia
+git+https://github.com/omry/omegaconf
+#omegaconf
 --extra-index-url https://download.pytorch.org/whl/nightly/cu121
-torch==2.1.0.dev20230626+cu121
-torchvision==0.16.0.dev20230626+cu121
-torchaudio==2.1.0.dev20230626+cu121
+torch==2.1.0.dev20230822+cu121
+torchvision==0.16.0.dev20230822+cu121
+torchaudio==2.1.0.dev20230822+cu121
 git+https://github.com/styler00dollar/pytorch_optimizer
 git+https://github.com/huggingface/transformers
 gdown
